--- a/toi/localisation/english/research_l_english.yml
+++ b/toi/localisation/english/research_l_english.yml
@@ -211,7 +211,10 @@
  tech_engineers4_desc: "Maintaining local mobility while constructing what would previously have been considered permanent fortifications and supply systems, combat engineers of the future will ensure that no matter where our troops are attacked, they will be prepared."
  hospital_tech: "Field Hospitals"
  logistics_tech: "Logistics Company"
+ signal_company_tech: "Signal Company"
+ maintenance_company_tech: "Maintenance Company"
  recon_tech: "Reconnaissance Company"
+ tech_category_naval_infantry: "Naval Infantry"
  tech_field_hospital: "Field Hospital I"
  tech_field_hospital_desc: "A casualty doesn't need to mean a dead soldier. Having immediate medical attention available for our wounded brought back to the rear is the first step towards ensuring this."
  tech_field_hospital2: "Field Hospital II"
@@ -692,6 +695,17 @@
  asw_tech: "Anti-Submarine Warfare Technology"
  naval_minesweeping: "Naval Minesweeping Technology"
  naval_minelaying: "Naval Minelaying Technology"
+ naval_mtg_module_rml: "RML Module Technology"
+ naval_mtg_module_rbl: "RBL Module Technology"
+ naval_mtg_module_rbl: "RBL Module Technology"
+ naval_mtg_module_rbl: "RBL Module Technology"
+ naval_mtg_module_rbl: "RBL Module Technology"
+ naval_mtg_module_rbl: "RBL Module Technology"
+ naval_mtg_module_rbl: "RBL Module Technology"
+ naval_mtg_module_rbl: "RBL Module Technology"
+ naval_mtg_module_rbl: "RBL Module Technology"
+ naval_mtg_module_rbl: "RBL Module Technology"
+ naval_mtg_module_rbl: "RBL Module Technology"
  synth_resources: "Synthetic resources"
  light_fighter: "Fighter models"
  cat_heavy_fighter: "Heavy Fighter models"
@@ -708,6 +722,7 @@
  support_tech: "Support Technology"
  marine_tech: "Marine Technology"
  mountaineers_tech: "Mountaineers Technology"
+ military_police_tech: "Military Police Technology"
  engineers_tech: "Engineers Technology"
  construction_tech: "Construction Technology"
  nuclear: "Nuclear Technology"
@@ -742,6 +757,11 @@
  fleet_in_being_tree: "Fleet in Being Doctrines"
  electronics: "Electronics"
  air_equipment_research: "Air Research Speed"
+ project_tech: "Projects"
+ plane_modules_tech: "Airplane Module Technology"
+ cat_air_guns: "Airplane Gun Technology"
+ cat_air_engine: "Airplane Engine Technology"
+ cat_air_bombs: "Airplane Bombs Technology"
  support_tech_research: "Support Unit Research Speed"
  synth_resources_research: "Synthetic Resources Research Speed"
  TITLE_ELECTRONIC_SUBTITLE: "Electronic Engineering"
@@ -1062,11 +1082,28 @@
  algorithms_tech: "Algorithms"
  computer_science_tech: "Computing Technology"
  doctrine_victorian_artillery_tech: "Victorian Land Doctrine: Artillery"
+ doctrine_victorian_corps_artillery_tech: "Victorian Land Doctrine: Corps Artillery"
+doctrine_victorian_massed_artillery_tech: "Victorian Land Doctrine: Massed Artillery"
+ doctrine_victorian_orderly_decentralization: "Victorian Land Doctrine: Orderly Decentralization"
+ doctrine_victorian_marine_dominance: "Victorian Land Doctrine: Marine Dominance"
+ doctrine_victorian_adapting_tradition: "Victorian Land Doctrine: Adapting Tradition"
+ doctrine_victorian_napoleons_legacy: "Victorian Land Doctrine: Napoleon's Legacy"
+ doctrine_victorian_cavalry_category: "Victorian Land Doctrine: Cavalry"
+ doctrine_victorian_combat_cavalry_category: "Victorian Land Doctrine: Combat Calvary"
+ doctrine_victorian_support_cavalry_category: "Victorian Land Doctrine: Support Cavalry"
  doctrine_victorian_traditional_tech: "Victorian Land Doctrine: Tradition"
  doctrine_victorian_industry_tech: "Victorian Land Doctrine: Industry"
  doctrine_victorian_innovative_tech: "Victorian Land Doctrine: Innovation"
  land_doctrine_victorian: "Napoleonic Army"
  land_doctrine_victorian_desc: "The tactics, strategies, and organization best exemplified by Napoleon's Grand Armee, the foundation of all armies in the mid-19th century, and a stepping stone to all that come after. This type of warfare was designed for large units of soldiers, fighting shoulder to shoulder, trained in massed volleys with smoothbore muzzle-loading firearms."
+ doctrine_machine_asymmetric_tech: "Machine Land Doctrine: Assymetric"
+ doctrine_machine_grand_battle_tech: "Machine Land Doctrine: Grand Battle"
+ doctrine_machine_first_to_battle_tech: "Machine Land Doctrine: First-to-Battle"
+ doctrine_machine_colonial_forces_tech: "Machine Land Doctrine: Colonial Forces"
+ doctrine_combined_arms_entrenchment_tech: "Combined Arms Land Doctrine: Entrenchment"
+ doctrine_combined_arms_grand_offensive_tech: "Combined Arms Land Doctrine: Grand Offensive"
+ doctrine_combined_arms_coordinated_fire_tech: "Combined Arms Land Doctrine: Coordinated Fire"
+ doctrine_combined_arms_attack_in_position_tech: "Combined Arms Land Doctrine: Attack-in-Position"
 
  naval_doctrine_victorian: "Victorian Navy"
  naval_doctrine_victorian_desc: "Our Naval Tactics and Doctrine must be kept up to modern standards."
@@ -1988,6 +2025,9 @@
  armor_tech_bicycle_division: "Bicycle Battalions"
  armor_tech_bicycle_division_desc: "We can use Bicycles to make our Infantry Divisions more mobile."
  fourwheel_vehicle_tech: "Four-Wheeled Vehicles"
+ walker_tech: "Walker Technology"
+ robot_tech: "Robot Technology"
+ helicopter_tech: "Helicopter Technology"
  ARMOR_SUBTITLE_STEAM_ENGINE: "Steam Engine"
  ARMOR_SUBTITLE_HIGH_SPEED_STEAM_ENGINE: "High Speed Steam Engine"
  armor_tech_steam_car_experiment: "Steam Car Experiments"
@@ -2153,6 +2193,8 @@
  doctrine_victorian_traditional_tech_research: "Victorian Traditional Doctrine Research Time"
  doctrine_victorian_industry_tech_research: "Victorian Industrial Doctrine Research Time"
  doctrine_victorian_innovative_tech_research: "Victorian Innovation Doctrine Research Time"
+ naval_equipment: "Naval Equipment"
+ naval_mtg_module_rml: ""
  monitor_tech_research: "Monitor Ship Research Time"
  frigate_tech_research: "Frigate Ship Research Time"
  sloop_tech_research: "Sloop Ship Research Time"
@@ -2536,6 +2578,7 @@
  naval_mtg_module_batteries_light_tech: "Light Naval Guns"
  naval_mtg_module_batteries_medium_tech: "Medium Naval Guns"
  naval_mtg_module_batteries_heavy_tech: "Heavy Naval Guns"
+ naval_mtg_module_batteries_superheavy_tech: "Superheavy Naval Guns"
  naval_mtg_module_propulsion_tech: "Naval Propulsion"
  naval_mtg_module_mines_tech: "Naval Mine Warfare"
  naval_mtg_module_torpedoes_tech: "Torpedoes"
