--- a/toi/localisation/english/france_l_english.yml
+++ b/toi/localisation/english/france_l_english.yml
@@ -908,6 +908,9 @@ FRA_SE_portrait_9_desc_text: "Jean-Baptiste Philibert\n Neutral Bonapartist"
  nap_france_flavor.36.d: "Italy has proposed an agreement that would require us to remove our garrisons from the Papal States, in exchange for their promised protection and peace with the nation. While Italy's end of the agreement does give some confidence, many within the country have campaigned for the integration of the Papal States into Italy. This raises concerns about if Italy will honor the agreement. Should we accept it, or reject it?"
  nap_france_flavor.36.a: "Accept"
  nap_france_flavor.36.b: "Reject"
+ nap_france_flavor.37.t: "The Risorgimento Begins"
+ nap_france_flavor.37.d: "It seems that our alliance with §b[PIE.GetNameWithFlag]§! has finally paid off for them, as we have been called in to assist in the war against §O[AUS.GetNameWithFlag]§!. This is also beneficial to us, though, as should §b[PIE.GetNameWithFlag]§! follow through with their promises, we will be given Savoy and Nice, along with Monaco as a vassal state."
+ nap_france_flavor.37.a: "Onwards to victory!"
 
   # Event Text
 
