Added 2 new 2iw events

--- a/toi/localisation/english/britain_l_english.yml
+++ b/toi/localisation/english/britain_l_english.yml
@@ -641,6 +641,9 @@
  britain.187.t: ""
  britain.187.d: ""
  britain.187.a: ""
+ britain.188.t: "Warning from France"
+ britain.188.d: "In correspondence with their war against §O[AUS.GetNameWithFlag]§!, §3[FRA.GetNameWithFlag]§! has warned us that declaring war on §G[RUS.GetNameWithFlag]§! will lead to severe retaliation."
+ britain.188.a: "We'll keep that in mind."
  
  ####Britain Votings
  british_votes.1.t: "The Inclosure Act of 1857"
