--- a/toi/localisation/english/france_l_english.yml
+++ b/toi/localisation/english/france_l_english.yml
@@ -911,6 +911,9 @@ FRA_SE_portrait_9_desc_text: "Jean-Baptiste Philibert\n Neutral Bonapartist"
  nap_france_flavor.37.t: "The Risorgimento Begins"
  nap_france_flavor.37.d: "It seems that our alliance with §b[PIE.GetNameWithFlag]§! has finally paid off for them, as we have been called in to assist in the war against §O[AUS.GetNameWithFlag]§!. This is also beneficial to us, though, as should §b[PIE.GetNameWithFlag]§! follow through with their promises, we will be given Savoy and Nice, along with Monaco as a vassal state."
  nap_france_flavor.37.a: "Onwards to victory!"
+ nap_france_flavor.38.t: "Warning to Britain"
+ nap_france_flavor.38.d: "As begins the war against §O[AUS.GetNameWithFlag]§!, we shall send a warning to §t[ENG.GetNameWithFlag]§! making clear that if they declare war on §G[RUS.GetNameWithFlag]§!, we will intervene and go to war with the Crown."
+ nap_france_flavor.38.a: "Continental war would be devastating."
 
   # Event Text
 
