Added 3 new 2iw events

--- a/toi/localisation/english/france_l_english.yml
+++ b/toi/localisation/english/france_l_english.yml
@@ -914,6 +914,15 @@ FRA_SE_portrait_9_desc_text: "Jean-Baptiste Philibert\n Neutral Bonapartist"
  nap_france_flavor.38.t: "Warning to Britain"
  nap_france_flavor.38.d: "As begins the war against §O[AUS.GetNameWithFlag]§!, we shall send a warning to §t[ENG.GetNameWithFlag]§! making clear that if they declare war on §G[RUS.GetNameWithFlag]§!, we will intervene and go to war with the Crown."
  nap_france_flavor.38.a: "Continental war would be devastating."
+ nap_france_flavor.39.t: "The Power of the Church"
+ nap_france_flavor.39.d: "Intervention in Italy means fighting a war near the home of His Holiness. This would be fine if it wasn't for the Concordat of 1801, which places us in a tight spot. We must act carefully during this war, as the Concordat is essential for the Pope to hold his throne, and this war may threaten it."
+ nap_france_flavor.39.a: "We'll be careful."
+ nap_france_flavor.40.t: "The Army"
+ nap_france_flavor.40.d: "While we should be fine for the war as of right now, the entry of another country or the failure of the French army in Italy may cause draft dodging and and, possibly, an early end to our participation in the war."
+ nap_france_flavor.40.a: "It would be best to get it over with quickly."
+ nap_france_flavor.41.t: "The Support of the Populous"
+ nap_france_flavor.41.d: "While our population reluctantly supports the war as of right now, the war developing in a way that threatens the Pope could lead to discontent from the population."
+ nap_france_flavor.41.a: "Another thing to worry about."
 
   # Event Text
 
