--- a/toi/localisation/english/equipment_l_english.yml
+++ b/toi/localisation/english/equipment_l_english.yml
@@ -4151,10 +4151,27 @@
  ship_47mm_battery_2_desc: "A good primary armament for Torpedo Boats"
  ship_47mm_battery_3: "47mm Gun Batteries"
  ship_47mm_battery_3_short: "47mm 1x8 I"
- ship_47mm_battery_3_desc: "A good secondary armament for cruisers"
+ ship_47mm_battery_3_desc: "A good secondary armament for Cruisers"
  ship_47mm_battery_4: "47mm Gun Array"
  ship_47mm_battery_4_short: "47mm 1x16 I"
- ship_47mm_battery_4_desc: "A good secondary armament for capital ships"
+ ship_47mm_battery_4_desc: "A good secondary armament for Capital Ships"
+ secondary_57mm_early: "57mm Secondaries"
+ secondary_57mm_early_desc: "57mm Secondary Batteries"
+ ship_57mm_battery_0: "57mm Gun"
+ ship_57mm_battery_0_short: "57mm 1x1 I"
+ ship_57mm_battery_0_desc: "A good primary armament for Torpedo Boats"
+ ship_57mm_battery_1: "57mm Guns"
+ ship_57mm_battery_1_short: "57mm 1x2 I"
+ ship_57mm_battery_1_desc: "A good primary armament for Torpedo Boats"
+ ship_57mm_battery_2: "57mm Gun Battery"
+ ship_57mm_battery_2_short: "57mm 1x4 I"
+ ship_57mm_battery_2_desc: "A good primary armament for Torpedo Boats"
+ ship_57mm_battery_3: "57mm Gun Batteries"
+ ship_57mm_battery_3_short: "57mm 1x8 I"
+ ship_57mm_battery_3_desc: "A good secondary armament for Cruisers"
+ ship_57mm_battery_4: "57mm Gun Array"
+ ship_57mm_battery_4_short: "57mm 1x16 I"
+ ship_57mm_battery_4_desc: "A good secondary armament for Capital Ships"
  naval_automatic_weapons: "Automatic Secondaries"
  naval_automatic_weapons_desc: "Naval Automatic Secondaries"
  ship_automatic_weapon_0: "Mounted Machine Gun"
