--- a/toi/localisation/english/mex_l_english.yml
+++ b/toi/localisation/english/mex_l_english.yml
@@ -42,6 +42,45 @@
  mexico_politics.10.e: ""
  mexico_politics.10.a: "The conservatives in [FROM.GetName] wont resist for long!"
  mexico_politics.10.b: "The liberals in [FROM.GetName] wont resist for long!"
+ mexico_politics.20.t: "Emissary to Il Papa"
+ mexico_politics.20.d: "Our Emissary, José Trinidad Ezequiel Montes Ledesma, to The Pope in Rome, Pius IX, has essentially failed in his mission. Ledesma sought for church restraint as Mexico, a soveriegn nation, sought to handle its own domestic affairs without interference from foreign organizations, including allowing the freedom of religion. However the Holy See would not budge unless the law banning active clergy members of the catholic church from holding political office was rescinded. Our plenipotentiary saw this as the encroachment on our sovereignty it really was and rejected it.\n\nThe only bright side to this was that we demonstrated to the catholic nations of the world that the Republic of Mexico is not beyond reason and is willing to negotiate when it does not interfer with our Independence."
+ mexico_politics.20.a: "Another Betrayal By The Church"
+ mexico_politics.21.t: "1857 Congressional Elections"
+ mexico_politics.21.d: "Amidst the National Turmoil, we have conducted the first congressional elections under our new Constitution. The election has returned a strong Liberal majority, confirming the popularity of our new reforms, and providing the political will to enforce and protect them. Next for congress to do is confirm the winner of the Presidential Election, deal with the unrest in the several states, and continue the policy of economic development and secularization."
+ mexico_politics.21.a: "Viva La Constitucion"
+ mexico_politics.22.t: "Dealing With Viadurri"
+ mexico_politics.22.d: "One of the most frustrating thorns in the side of the Liberal government for years now is Governor José Santiago Vidaurri Valdez. Dominating northern Mexico, Viadurri seems himself more in association with Mexico than part of it. Because of this mindset he is aggravated by the central government's weak attempts to raise revenue by taxing trade through his land borders with the United States, and refuses to turn over revenues generated from said taxation. With Congress now seated, the government has a more organized and stronger bagaining position. We can attempt to reach a settlement with Viadurri, where give several concessions but remain amicable with him. Or we can use the bludgeon, and compel the release of those funds. This will definitely escalate tensions in the north though."
+ mexico_politics.22.a: "TODO"
+ MEX_negotiate_with_viadurri_tt: ""
+ mexico_politics.22.b: "TODO"
+ MEX_confront_viadurri_tt: ""
+ mexico_politics.23.t: "Request For Emergency Powers"
+ mexico_politics.23.d: "TODO"
+ mexico_politics.23.a: "TODO"
+ mexico_politics.24.t: "National Insurrection"
+ mexico_politics.24.d: "TODO"
+ mexico_politics.24.a: "TODO"
+ mexico_politics.30.t: "Partisanship Divides Mexico"
+ mexico_politics.30.d: "TODO"
+ mexico_politics.30.a: "TODO"
+ mexico_politics.31.t: "Partisanship Divides Mexico"
+ mexico_politics.31.d: "TODO"
+ mexico_politics.31.a: "TODO"
+ mexico_politics.32.t: "Partisanship Divides Mexico"
+ mexico_politics.32.d: "TODO"
+ mexico_politics.32.a: "TODO"
+ mexico_politics.33.t: "Partisanship Divides Mexico"
+ mexico_politics.33.d: "TODO"
+ mexico_politics.33.a: "TODO"
+ mexico_politics.34.t: "Partisanship Divides Mexico"
+ mexico_politics.34.d: "TODO"
+ mexico_politics.34.a: "TODO"
+ mexico_politics.35.t: "Partisanship Divides Mexico"
+ mexico_politics.35.d: "TODO"
+ mexico_politics.35.a: "TODO"
+ mexico_politics.36.t: "Partisanship Divides Mexico"
+ mexico_politics.36.d: "TODO"
+ mexico_politics.36.a: "TODO"
  MEX_mexican_reform_war_resistance_476: "Quell Resistance in [476.GetName]"
  MEX_mexican_reform_war_resistance_475: "Quell Resistance in [475.GetName]"
  MEX_mexican_reform_war_resistance_474: "Quell Resistance in [474.GetName]"
@@ -397,9 +436,17 @@
  MEX_idea_starting_tariff_limiter: "No More Taxes"
  MEX_idea_starting_tariff_limiter_desc: "In the wake of the Santanista government's high taxes and subsequent overthrow, the new Revolutionary Government sought to undue the ills that befell the nation under his rule, and repealed those high taxes."
 
+ #Dynamic Modifiers
+ dynmod_MEX_la_reforma_resistance: "La Reforma Civil Unrest"
+ dynmod_MEX_resistance_modifier_1: "Reactionary Stronghold"
+ dynmod_MEX_resistance_modifier_2: "Escalating Unrest"
+ dynmod_MEX_resistance_modifier_3: "Steady Unrest"
+ dynmod_MEX_resistance_modifier_4: "Falling Unrest"
+ dynmod_MEX_resistance_modifier_5: "Liberal Stronghold"
+
  #Decisions
  MEX_decision_comonfort_interim_resistance_quell: "Attempt to Quell Resistance"
- MEX_decision_comonfort_interim_resistance_quell_desc: "TODO"
+ MEX_decision_comonfort_interim_resistance_quell_desc: "We must use what resources the State has to put down local rebellions and prevent more from rising up."
  MEX_decision_liberal_media: "Liberal Media Blitz"
  MEX_decision_liberal_media_desc: "To counter the Reactionists inflammatory rhetoric in the media, we must undertake our own campaign to undercut them at every turn."
  MEX_decision_sell_clergy_property: "Sell Clergy Property"
